blocks/content-intro/content-intro.css
/* Section - Content Intro Checkmark */
main .section.content-intro-checkmark > .content-intro-wrapper {
  padding: var(--spacer-layout-06) 0;
}

/* Block - Content Intro */
.content-intro {
  margin-bottom: var(--spacer-layout-04);
}

.content-intro .content-intro__inner h2 {
  margin: 0;
}

.content-intro .content-intro__inner h2 + p {
  margin-top: var(--spacer-element-07);
  margin-bottom: 0;
}

.content-intro .content-intro__col-2 {
  font-size: var(--font-size-16);
  font-weight: 300;
  line-height: 160%;
}

.content-intro .content-intro__col-2 blockquote {
  margin: var(--spacer-element-05) 0 0;
}

.content-intro .content-intro__col-2 blockquote p {
  margin: 0;
}

.content-intro p.content-intro__eyebrow {
  font-family: var(--sans-serif-font-medium);
  text-transform: uppercase;
  font-size: var(--font-size-11);
  font-weight: 500;
  letter-spacing: var(--letter-spacing-02-em);
  margin: 0 0 var(--spacer-element-07) 0;
}

.content-intro .button-container {
  margin-top: var(--spacer-element-08);
}

.content-intro .button-container:last-child {
  margin-bottom: 0;
}

/* Block - Content Intro: Checkmark */
.content-intro ul {
  margin: var(--spacer-layout-04) 0 0 0;
  padding-inline-start: 0;
}

.content-intro ul li {
  display: flex;
  align-items: center;
  position: relative;
  list-style: none;
  font-size: var(--font-size-18);
  font-family: var(--sans-serif-font-regular);
  line-height: 160%;
  border-radius: var(--spacer-element-09);
  width: 100%;
  min-height: var(--spacer-layout-04);
  padding: 0 var(--spacer-element-07);
  padding-inline-start: var(--spacer-element-07);
  margin: 0 0 var(--spacer-element-05) 0;
}

.content-intro ul li:last-of-type {
  margin-bottom: 0;
}

.content-intro ul li::before {
  content: "";
  display: inline-block;
  background: url('../../icons/check-bullet.svg') no-repeat;
  width: var(--spacer-element-07);
  height: var(--spacer-element-07);
  list-style: none;
  position: relative;
  vertical-align: middle;
  margin-right: var(--spacer-element-05);
}

/* Block - Content Intro: Stat Number */
.content-intro-stat .content-intro .content-intro__col-2 {
  position: relative;
  margin: var(--spacer-element-10) 0 0 calc(42px + var(--spacer-element-05));
  padding-inline-end: calc(42px + var(--spacer-element-05));
}

.content-intro-stat .content-intro .content-intro__col-2::before {
  content: "";
  display: block;
  position: absolute;
  top: 0;
  width: 100%;
  height: 1px;
  background-image: var(--gradient-vertical);
}

.content-intro-stat .content-intro .content-intro__col-2 h2 {
  font-size: var(--font-size-96);
  margin: 0;
  line-height: 120%;
}

.content-intro-stat .content-intro .content-intro__col-2 p {
  font-size: var(--font-size-16);
}

.content-intro-stat .content-intro .content-intro__col-2 h2 + p {
  margin-top: var(--spacer-element-05);
}

/* Theme - Content Intro */
.section[data-theme] .content-intro ul li {
  color: var(--theme-text-primary);
  background-color: var(--theme-card-background-color);
}

/* Tablet */
@media only screen and (min-width: 768px) {
  /* Block - Content Intro */
  .content-intro .content-intro__col-1 {
    width: 75%;
  }
  
  .content-intro .content-intro__col-2 {
    width: 100%;
  }

  .content-intro .content-intro__col-2 blockquote {
    width: 75%;
    margin: var(--spacer-element-07) 0 0;
  }

  /* Block - Content Intro: Checkmark */
  .content-intro ul {
    display: grid;
    grid-template-columns: 1fr 1fr;
    column-gap: var(--gap-24);
  }

  .content-intro ul li {
    max-width: inherit;
  }

  /* Block - Content Intro: Stat Number */
  .content-intro-stat .content-intro .content-intro__inner {
    display: flex;
    align-items: flex-start;
    flex-shrink: 0;
    gap: var(--gap-84);
  }

  .content-intro-stat .content-intro .content-intro__col-2 {
    max-width: var(--sidebar-max-container);
    margin-left: auto;
    padding-inline-end: 0;
  }
}

/* Desktop */
@media only screen and (min-width: 1200px) {
  /* Section - Content Intro */
  main .section.content-intro-checkmark > .content-intro-wrapper {
    padding: var(--spacer-layout-07) 0;
  }

  /* Block - Content Intro */
  .content-intro .content-intro__inner {
    display: flex;
    align-items: flex-start;
    flex-shrink: 0;
    gap: var(--gap-120);
    max-width: 1128px;
  }

  .content-intro .content-intro__inner h2 + p {
    margin-top: var(--spacer-element-08);
  }

  .content-intro .content-intro__col-1 {
    width: 66.6666%;
    max-width: var(--text-max-container);
  }
  
  .content-intro .content-intro__col-2 {
    width: var(--sidebar-max-container);
    font-size: var(--font-size-21);
  }

  .content-intro .content-intro__col-2 blockquote {
    margin: var(--spacer-layout-05) 0 0;
  }

  .content-intro p.content-intro__eyebrow {
    font-size: var(--font-size-14);
    margin: 0 0 var(--spacer-element-08) 0;
  }

  /* Block - Content Intro: Checkmark */
  .content-intro ul {
    grid-template-columns: 1fr;
    column-gap: 0;
    margin-top: 0;
  }

  .content-intro ul li {
    font-size: var(--font-size-21);
    min-height: var(--spacer-layout-05);
  }

  .content-intro ul li::before {
    margin-right: var(--spacer-element-07);
  }

  /* Block - Content Intro: Stat Number */
  .content-intro-stat .content-intro .content-intro__inner {
    display: flex;
    align-items: flex-start;
    flex-shrink: 0;
    gap: var(--gap-120);
  }

  .content-intro-stat .content-intro .content-intro__col-2 p {
    padding-inline-end: var(--spacer-layout-05);
  }

  .content-intro-stat .content-intro .content-intro__col-2 h2 {
    font-size: var(--font-size-128);
  }
}

